fix: align issues on main page

--- a/frontend-next-migration/src/preparedPages/MainPage/ui/_components/sections/PlayWithUs/PlayWithUs.module.scss
+++ b/frontend-next-migration/src/preparedPages/MainPage/ui/_components/sections/PlayWithUs/PlayWithUs.module.scss
@@ -42,6 +42,7 @@
     font: var(--font-sw-xxxl);
     color: var(--primary-color);
     margin-bottom: 20px;
+    text-align: center;
     //todo add animation as well
     //opacity: 0;
     //transform: translateX(-100%);
